@@ -26,9 +26,21 @@ AUTOMAKE_OPTIONS = foreign
 
 noinst_LIBRARIES = libwidget.a
 
-libwidget_a_SOURCES = browse.c debugger.c error.c filesel.c menu_data.c \
-picture.c widget.c menu.c options.c select.c text.c \
-	roms.c scaler.c
+libwidget_a_SOURCES = \
+	browse.c \
+	debugger.c \
+	error.c \
+	filesel.c \
+	joystick.c \
+	menu.c \
+	menu_data.c \
+	options.c \
+	picture.c \
+	roms.c \
+	scaler.c \
+	select.c \
+	text.c \
+	widget.c
 
 INCLUDES = @GTK_CFLAGS@ @GLIB_CFLAGS@ @LIBSPEC_CFLAGS@
 
