@@ -400,6 +400,7 @@ widget_t widget_data[] = {
   { widget_scaler_draw,   widget_scaler_finish,  widget_scaler_keyhandler   },
   { widget_debugger_draw, NULL,			 widget_debugger_keyhandler },
   { widget_roms_draw,     widget_roms_finish,	 widget_roms_keyhandler     },
+  { widget_joystick_draw, widget_joystick_finish, widget_joystick_keyhandler },
 
 };
 
