@@ -64,6 +64,7 @@ typedef enum widget_type {
   WIDGET_TYPE_SCALER,		/* Select scaler */
   WIDGET_TYPE_DEBUGGER,		/* Debugger widget */
   WIDGET_TYPE_ROM,		/* ROM selector widget */
+  WIDGET_TYPE_JOYSTICK,		/* Joystick selection widget */
 
 } widget_type;
 
